# HumanResourceCompiler

./: .gitignore  .gitmodules  ADDITIONAL_LICENSE  LICENSE  README.md  config_cmake.txt  load_local_llvm.sh  solutions
compiler/: .clang-tidy  CMakeLists.txt  Doxyfile  errors.xlsx  vcpkg.json
compiler/cmake/: FindFlexBison.cmake  versioning.cmake
compiler/hrc/: CMakeLists.txt  CompilerOptions.cpp  CompilerOptions.h  FileManager.cpp  FileManager.h  Utilities.cpp  Utilities.h  hrc_global.h  main.cpp
compiler/hrint/: Accumulator.cpp  Accumulator.h  CMakeLists.txt  Compile.cpp  Compile.h  CompileAST.cpp  CompileAST.h  IOManager.cpp  IOManager.h  Interpreter.cpp  Interpreter.h  InterpreterExceptions.cpp  InterpreterExceptions.h  InterpreterOptions.cpp  InterpreterOptions.h  MemoryManager.cpp  MemoryManager.h  hrint_global.h  main.cpp
compiler/include/: hrl_global.h
compiler/interpreter/: CMakeLists.txt
compiler/interpreter/include/: ASTInterpreter.h  AbstractInterpreter.h  HRMByte.h  IRInterpreter.h  IntAccumulator.h  IntIOManager.h  IntMemoryManager.h  Interpreter.h  InterpreterAccumulator.h  InterpreterExceptions.h  InterpreterIOManager.h  InterpreterMemoryManager.h  interpreter_global.h
compiler/interpreter/src/: ASTInterpreter.cpp  AbstractInterpreter.cpp  Accumulator.cpp  HRMByte.cpp  IOManager.cpp  IRInterpreter.cpp  Interpreter.cpp  InterpreterAccumulator.cpp  InterpreterExceptions.cpp  InterpreterIOManager.cpp  InterpreterMemoryManager.cpp  MemoryManager.cpp
compiler/irgen/: BuildSSA.md  CMakeLists.txt  Optimizations.md  Passes.md  README.md
compiler/irgen/include/: AnalyzeLivenessPass.h  BuildControlFlowGraphPass.h  BuildSSAPass.h  ControlFlowGraphBuilder.h  DataStructure.md  EliminateDeadBasicBlockPass.h  GraphvizGenerator.h  HighIRProgram.h  IRGenOptions.h  IRGeneratorError.h  IROps.h  IROptimizationPass.h  IROptimizationPassManager.h  IRProgramStructure.h  LowerMulPass.h  MergeConditionalBranchPass.h  Operand.h  PropagateCopyPass.h  RemoveDeadInstructionsPass.h  RenumberVariableIdPass.h  StripEmptyBasicBlockPass.h  StripNopPass.h  StripUselessInstructionPass.h  TACGen.h  ThreeAddressCode.h  VerifySSAPass.h  irgen_global.h
compiler/irgen/src/: AnalyzeLivenessPass.cpp  BuildControlFlowGraphPass.cpp  BuildSSA.md  BuildSSAPass.cpp  ControlFlowGraphBuilder.cpp  EliminateDeadBasicBlockPass.cpp  GraphvizGenerator.cpp  HighIRProgram.cpp  IROps.cpp  IROptimizationPass.cpp  IROptimizationPassManager.cpp  IRProgramStructure.cpp  LowerMulPass.cpp  MergeConditionalBranchPass.cpp  Operand.cpp  PropagateCopyPass.cpp  RemoveDeadInstructionsPass.cpp  RenumberVariableIdPass.cpp  StripEmptyBasicBlockPass.cpp  StripNopPass.cpp  StripUselessInstructionPass.cpp  TACGen.ProgramBuilder.cpp  TACGen.Utils.cpp  TACGen.Visitor.cpp  TACGen.cpp  ThreeAddressCode.cpp  VerifySSAPass.cpp
compiler/lexer/: CMakeLists.txt  HRLLexer.cpp  HRLLexer.h  HRLToken.h  hrl-refined.ebnf.wip  hrl.ebnf  hrl.l  lexer_global.h  lexer_helper.cpp  lexer_helper.h
compiler/lexer/include/: HRLLexer.h  HRLToken.h  lexer_global.h  lexer_helper.h
compiler/lexer/src/: HRLLexer.cpp  HRLToken.cpp  hrl.l
compiler/parser/: CMakeLists.txt
compiler/parser/include/: ASTBuilder.h  ASTNode.h  ASTNodeAttribute.h  ASTNodeForward.h  ASTNodeGraphvizBuilder.h  ASTNodeVisitor.h  Formatter.h  ParseTreeNode.h  ParseTreeNodeForward.h  ParseTreeNodeGraphvizBuilder.h  ParseTreeNodeVisitor.h  RecursiveDescentParser.Common.h  RecursiveDescentParser.h  parser_global.h
compiler/parser/src/: ASTBuilder.cpp  ASTNode.cpp  ASTNodeGraphvizBuilder.cpp  ASTNodeVisitor.cpp  Formatter.cpp  ParseTreeNode.cpp  ParseTreeNodeGraphvizBuilder.cpp  ParseTreeNodeVisitor.cpp  RecursiveDescentParser.Expr.cpp  RecursiveDescentParser.Parsing.cpp  RecursiveDescentParser.Utils.cpp  RecursiveDescentParser.cpp  first.txt
compiler/semanalyzer/: CMakeLists.txt  README.md
compiler/semanalyzer/include/: ClearSymbolTablePass.h  ConstantFoldingPass.h  ControlFlowVerificationPass.h  DeadCodeEliminationPass.h  ScopeManager.h  SemanticAnalysisErrors.h  SemanticAnalysisPass.h  SemanticAnalysisPassManager.h  SemanticConstants.h  StripAttributePass.h  Symbol.h  SymbolAnalysisPass.h  SymbolTable.h  SymbolTableAnalyzer.h  SymbolTableBuilder.h  UnusedSymbolAnalysisPass.h  UseBeforeInitializationCheckPass.h  UseBeforeInitializationPass.h  WithScopeTracker.h  WithSymbolTable.h  semanalyzer_global.h
compiler/semanalyzer/src/: ClearSymbolTablePass.cpp  ConstantFoldingPass.cpp  ControlFlowVerificationPass.cpp  DeadCodeEliminationPass.cpp  ScopeManager.cpp  SemanticAnalysisPass.cpp  SemanticAnalysisPassManager.cpp  StripAttributePass.cpp  Symbol.cpp  SymbolAnalysisPass.Utils.cpp  SymbolAnalysisPass.Visits.cpp  SymbolAnalysisPass.cpp  SymbolTable.cpp  SymbolTableAnalyzer.cpp  SymbolTableBuilder.cpp  UnusedSymbolAnalysisPass.cpp  UseBeforeInitializationCheckPass.cpp  UseBeforeInitializationPass.cpp  WithScopeTracker.cpp  WithSymbolTable.cpp
compiler/tests/: CMakeLists.txt  SemAnalyzer.cpp  TestASTInterpreter.cpp  TestASTInterpreter.h  TestIRInterpreter.cpp  TestIRInterpreter.h  TestInterpreter.cpp  TestInterpreter.h  TestSemAnalyzer.cpp  Tests.cpp  Tests.h  WithIR.cpp  WithIR.h  WithParsed.cpp  WithParsed.h  WithSemanticAnalyzed.cpp  WithSemanticAnalyzed.h
compiler/tests/run/: .gitignore
compiler/tests/semanalyzer/: CMakeLists.txt  Tests.cpp  Tests.h
compiler/util/: CMakeLists.txt
compiler/util/include/: ErrorFilters.h  ErrorManager.h  HRBox.h  (+6 more)
compiler/version/: CMakeLists.txt  git.c.in
utils/ebnf/: .clang-format  ASTDepGraphBuilderVisitor.cpp  ASTDepGraphBuilderVisitor.h  ASTExtendedInfo.h  ASTNode.cpp  ASTNode.h  ASTNodeForward.h  ASTNodeVisitor.cpp  ASTNodeVisitor.h  ASTPrintVisitor.cpp  CMakeLists.txt  DependencyGraphAnalyzer.cpp  DependencyGraphAnalyzer.h  DependencyGraphBuilder.cpp  DependencyGraphBuilder.h  DependencyGraphSanityChecker.cpp  DependencyGraphSanityChecker.h  FirstFollowElement.cpp  FirstFollowElement.h  LICENSE  Tasks.cpp  Tasks.h  ebnf_global.h  exceptions.py  lexer.l  main.cpp  main.py  parser.py  parser.y  sample.ebnf  tokenizer.py
(+151 files in other folders)
